# igdb-provider

./: .build.yml  .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/client/: auth.rs  mod.rs
src/error/: mod.rs
src/models/: collection.rs  company.rs  cover.rs  game.rs  game_mode.rs  genre.rs  involved_company.rs  mod.rs  platform.rs  screenshot.rs  video.rs
