[package]
name = "igdb_provider"
description = "IGDB API client"
version = "0.1.0"
authors = ["José Miguel Sarasola<alosarjos@gmail.com>"]
homepage = "https://git.sr.ht/~alosarjos/igdb-provider"
repository = "https://git.sr.ht/~alosarjos/igdb-provider"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Timestamps
chrono = "0.4"

# HTTP Requests
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

[dev-dependencies]
# Async tests
tokio = { version = "1.15", features = ["macros"] }
